# DSA-Projects

./: BSTImplementation.cpp  CMakeLists.txt  LibraryManagement.cpp  README.md  Readme.md  SimpleCalculatorWithHistory.cpp  SortAlgoVisualization.cpp  StudentGradeManagement.cpp  ToDo.cpp  dictionary.txt
BinarySearchTreeImplementation/: Readme.md
Calculator/: Readme.md
Distributed Cache System/mini-redis/: .dockerignore  CMakeLists.txt  DOCKER.md  Dockerfile  README.md  docker-compose.yml  test_client.cpp  valkeyrie-cli.cpp
Distributed Cache System/mini-redis/include/cache/: CacheEngine.h  EvictionPolicy.h  LFUPolicy.h  LRUPolicy.h
Distributed Cache System/mini-redis/include/network/: Protocol.h  Server.h
Distributed Cache System/mini-redis/include/storage/: InMemoryStorage.h  Storage.h
Distributed Cache System/mini-redis/include/utils/: ConsistentHash.h  ThreadPool.h
Distributed Cache System/mini-redis/src/: main.cpp
Distributed Cache System/mini-redis/src/cache/: CacheEngine.cpp  LFUPolicy.cpp  LRUPolicy.cpp
Distributed Cache System/mini-redis/src/network/: Protocol.cpp  Server.cpp
Distributed Cache System/mini-redis/src/storage/: InMemoryStorage.cpp
Distributed Cache System/mini-redis/src/utils/: ConsistentHash.cpp  ThreadPool.cpp
Distributed Cache System/mini-redis/tests/: CMakeLists.txt  test_cache_engine.cpp  test_consistent_hash.cpp  test_lfu.cpp  test_lru.cpp  test_protocol.cpp  test_storage.cpp
LibraryManagementSystem/: LMSUSingMap.cpp  LMSUsingLinkedList.cpp  Readme.md  library.txt
Maze Solver/: MazeSolverBFS.cpp  MazeSolverDFS.cpp  Readme.md
Number Guessing/: NumberGuessingWithStatistics.cpp  Readme.md
Real Time Chat Application/: Readme.md  architecture.md  build_guide.md  client.py  client2.py  run_guide.md  server_architecture.md
Real Time Chat Application/backend/: CMakeLists.txt  Dockerfile
Real Time Chat Application/backend/config/: dev.yaml  logging.yaml  prod.yaml  redis.yaml
Real Time Chat Application/backend/include/analytics/: metrics.hpp  monitoring.hpp  rate_limiter.hpp
Real Time Chat Application/backend/include/auth/: auth_service.hpp  jwt_manager.hpp  password_hasher.hpp  session_manager.hpp
Real Time Chat Application/backend/include/cache/: cache_manager.hpp  lru_cache.hpp  redis_client.hpp
Real Time Chat Application/backend/include/common/: constants.hpp  errors.hpp  types.hpp  utils.hpp
Real Time Chat Application/backend/include/database/: db_pool.hpp  postgres_client.hpp
Real Time Chat Application/backend/include/database/repositories/: conversation_repository.hpp  group_repository.hpp  messege_repository.hpp  user_repository.hpp
Real Time Chat Application/backend/include/graph/: friendship_graph.hpp  recommendation_engine.hpp  shortest_path.hpp
Real Time Chat Application/backend/include/groups/: group_manager.hpp  group_service.hpp  permissions.hpp
Real Time Chat Application/backend/include/logging/: log_formatter.hpp  log_manager.hpp  logger.hpp
Real Time Chat Application/backend/include/messaging/: delivery_manager.hpp  message_dispatcher.hpp  message_ordering.hpp  message_queue.hpp  message_service.hpp
Real Time Chat Application/backend/include/notifications/: notification_service.hpp  push_manager.hpp
Real Time Chat Application/backend/include/presence/: online_tracker.hpp  presence_service.hpp  typing_tracker.hpp
Real Time Chat Application/backend/include/search/: inverted_index.hpp  search_service.hpp  trie.hpp
Real Time Chat Application/backend/include/websocket/: connection_manager.hpp  websocket_server.hpp  websocket_session.hpp
Real Time Chat Application/backend/migrations/: 001_create_users.sql  002_create_conversations.sql  003_create_messages.sql  004_create_groups.sql  005_create_group_members.sql  006_indexes.sql
Real Time Chat Application/backend/src/: main.cpp
Real Time Chat Application/backend/src/analytics/: metrics.cpp  monitoring.cpp  rate_limiter.cpp
Real Time Chat Application/backend/src/auth/: auth_service.cpp  jwt_manager.cpp  password_hasher.cpp  session_manager.cpp
Real Time Chat Application/backend/src/cache/: cache_manager.cpp  lru_cache.cpp  redis_client.cpp
Real Time Chat Application/backend/src/common/: constants.cpp  errors.cpp  types.cpp  utils.cpp
Real Time Chat Application/backend/src/database/: db_pool.cpp  postgres_client.cpp
Real Time Chat Application/backend/src/database/repositories/: conversation_repository.cpp  group_repository.cpp  messege_repository.cpp  user_repository.cpp
Real Time Chat Application/backend/src/graph/: friendship_graph.cpp  recommendation_engine.cpp  shortest_path.cpp
Real Time Chat Application/backend/src/groups/: group_manager.cpp  group_service.cpp  permissions.cpp
Real Time Chat Application/backend/src/logging/: log_formatter.cpp  log_manager.cpp  logger.cpp
Real Time Chat Application/backend/src/messaging/: delivery_manager.cpp  message_dispatcher.cpp  message_ordering.cpp  message_queue.cpp  message_service.cpp
Real Time Chat Application/backend/src/notifications/: notification_service.cpp  push_manager.cpp
Real Time Chat Application/backend/src/presence/: online_tracker.cpp  presence_service.cpp  typing_tracker.cpp
Real Time Chat Application/backend/src/search/: inverted_index.cpp  search_service.cpp  trie.cpp
Real Time Chat Application/backend/src/websocket/: connection_manager.cpp  websocket_server.cpp  websocket_session.cpp
SocialMediaRecommendation/: Graph.cpp  Graph.h  Readme.md  SocialMediaRecommendation.cpp  simple_test.cpp  test_combined.txt
Spell Checker/: Readme.md  SpellCheckerUsingTrie.cpp
Stock Analysis/: Readme.md  main.py
(+72 files in other folders)
